tests/bad/testSyntaxExplicitMissingType.grc
// Error: Expected type after :
x: = 10
